# TrustyReader

./: .gitignore  Cargo.toml  README.md  baseline.sh  bench.sh  out.tbmp  run-s3.sh  run.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
core/: Cargo.toml
core/src/: application.rs  battery.rs  bench.rs  display.rs  framebuffer.rs  fs.rs  input.rs  io.rs  layout.rs  lib.rs  zip.rs
core/src/activities/: demo.rs  filebrowser.rs  home.rs  imageviewer.rs  mod.rs  reader.rs  settings.rs
core/src/container/: EpubCssParser.cpp  book.rs  css.rs  image.rs  jpeg.rs  markdown.rs  mod.rs  plaintext.rs  png.rs  tbmp.rs  text_provider.rs  xml.rs  xt.rs
core/src/container/epub/: container.rs  error.rs  mod.rs  ncx.rs  opf.rs  spine.rs
core/src/res/: mod.rs
core/src/res/font/: bookerly_26.bw  bookerly_26.lsb  bookerly_26.msb  bookerly_26.rs  bookerly_28.bw  bookerly_28.lsb  bookerly_28.msb  bookerly_28.rs  bookerly_30.bw  bookerly_30.lsb  bookerly_30.msb  bookerly_30.rs  bookerly_bold_26.bw  bookerly_bold_26.lsb  bookerly_bold_26.msb  bookerly_bold_26.rs  bookerly_bold_28.bw  bookerly_bold_28.lsb  bookerly_bold_28.msb  bookerly_bold_28.rs  bookerly_bold_30.bw  bookerly_bold_30.lsb  bookerly_bold_30.msb  bookerly_bold_30.rs  bookerly_bold_italic_26.bw  bookerly_bold_italic_26.lsb  bookerly_bold_italic_26.msb  bookerly_bold_italic_26.rs  bookerly_bold_italic_28.bw  bookerly_bold_italic_28.lsb  bookerly_bold_italic_28.msb  bookerly_bold_italic_28.rs  bookerly_bold_italic_30.bw  bookerly_bold_italic_30.lsb  bookerly_bold_italic_30.msb  bookerly_bold_italic_30.rs  bookerly_italic_26.bw  bookerly_italic_26.lsb  bookerly_italic_26.msb  bookerly_italic_26.rs  (+9 more)
core/src/res/img/: bebop.rs  mod.rs  test_image.rs
core/src/res/xt/: mod.rs  page_1.xth  test.xtg
desktop/: Cargo.toml
desktop/benches/: epub_bench.rs
desktop/src/: display.rs  fontgen.rs  img2xt.rs  lib.rs  main.rs  minifb_display.rs  parse.rs  std_fs.rs  xmltest.rs
libs/embedded_xml/: Cargo.toml  README.md
libs/embedded_xml/benches/: read_bench.rs
libs/embedded_xml/src/: attributes.rs  events.rs  lib.rs  reader.rs  tests.rs
libs/embedded_xml/src/test_data/: content.opf  pg-footer.xhtml  pg-header.xhtml  toc.ncx  toc.xhtml
libs/embedded_zip/: Cargo.toml
libs/embedded_zip/src/: entry.rs  error.rs  lib.rs  parser.rs
s3/: Cargo.toml  README.md  build.rs
s3/.cargo/: config.toml
s3/src/: eink_display.rs  main.rs  sdspi_fatfs.rs
x4/: Cargo.toml  build.rs
x4/.cargo/: config.toml
x4/fatfs/: compat.c  ffconf.h
x4/src/: adc_input.rs  baseline.rs  bench.rs  eink_display.rs  input.rs  main.rs  sdspi_fatfs.rs  sdspi_fs.rs
