[package]
name = "trusty-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
embedded-graphics.workspace = true
miniz_oxide = { version = "0.9.0", default-features = false }
embedded-io.workspace = true
log.workspace = true
hypher = "0.1.6"
heapless = "0.9.2"
strum = { version = "0.27.2", default-features = false, features = ["strum_macros"] }
strum_macros = "0.27.2"
rotate-enum = "0.1.2"
embedded-xml.workspace = true
