[package]
name = "trusty-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
embedded-xml.workspace = true
embedded-zip.workspace = true
embedded-graphics.workspace = true
embedded-io.workspace = true
log.workspace = true
hypher = { version = "0.1.6", default-features = false, features = [
    "alloc",
    "english", "french", "german", "spanish", "italian"
] }
heapless = "0.9.2"
strum = { version = "0.27.2", default-features = false, features = ["strum_macros"] }
strum_macros = "0.27.2"
rotate-enum = "0.1.2"
html-escape = { version = "0.2.13", default-features = false }
