[package]
name = "trusty-desktop"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "img2xt"
path = "src/img2xt.rs"

[[bin]]
name = "fontgen"
path = "src/fontgen.rs"

[[bin]]
name = "xmltest"
path = "src/xmltest.rs"

[dependencies]
trusty-core = { path = "../core" }
env_logger = "0.11.8"
log.workspace = true
minifb = "0.28.0"
embedded-graphics.workspace = true
embedded-io = { workspace = true, features = ["std"] }
argh = "0.1.13"
image = { version = "0.25.9", features = ["png", "jpeg", "bmp"], default-features = false }
fontdue = "0.9.3"
