[package]
name = "embedded-zip"
edition.workspace = true
rust-version.workspace = true
version = "1.0.0"
keywords = ["zip", "embedded-io"]
description = "A no_std ZIP reader using embedded-io for memory constrainted environment."
readme = "README.md"
repository.workspace = true
license-file.workspace = true

[dependencies]
embedded-io.workspace = true
log = { workspace = true, optional = true }
miniz_oxide = { version = "0.9.0", default-features = false }
zerocopy = { version = "0.8.40", features = ["derive"] }

[features]
log = ["dep:log"]
default = []
